Add DCAE DT to dcae docker run procedure
Add DCAE DT to dcae docker run procedure

Change-Id: I06ed45ca1486f0725de0d64e58f2954428a165d5
Issue-ID: SDC-1693
Signed-off-by: Areli, Fuss (af732p) <af732p@att.com>